k8s/02_service.yml
kind: Service
apiVersion: v1
metadata:
  name: {app-name}
  namespace: {name-space}
spec:
  selector:
    app: {app-name}
  ports:
    - protocol: TCP
      port: 8080
